Add project configuration files- Add pytest.ini with markers and coverage settings- Add pyproject.toml for project metadata- Add conftest.py with global fixtures- Create fixtures directory for test fixtures- Add environment configuration example- Update .gitignore for config files

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,12 @@ test-results/
 # 環境變數
 .env
 .env.local
+
+# 配置（敏感資訊）
+config/environments/*.yaml
+!config/environments/dev.yaml.example
+
+# 測試報告
+reports/
+*.log
+test-results/
