Add first test cases and fix pytest configuration
- Add unit test example (test_sample.py) with 3 test cases
- Add integration test example (test_config.py) for config validation
- Fix pytest.ini: remove inline comments in addopts
- Add 'unit' marker to pytest.ini markers list
- All 6 tests passing with 72% code coverage
- Verify pytest configuration works correctly

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,16 +9,17 @@ testpaths = tests
 
 # 命令行選項
 addopts = 
-    -v                          # 詳細輸出
-    --strict-markers            # 嚴格標記模式
-    --tb=short                  # 簡短的 traceback
-    --cov=.                     # 代碼覆蓋率
-    --cov-report=html           # HTML 覆蓋率報告
-    --cov-report=term-missing   # 終端顯示缺失的行
-    --alluredir=reports/allure-results  # Allure 報告目錄
+    -v
+    --strict-markers
+    --tb=short
+    --cov=.
+    --cov-report=html
+    --cov-report=term-missing
+    --alluredir=reports/allure-results
 
 # 標記定義（重要！）
 markers =
+    unit: 單元測試
     smoke: 冒煙測試，快速驗證核心功能
     regression: 回歸測試，完整測試套件
     integration: 整合測試
