feat: Step 9 - Monitoring Integration完成
- 新增 OpenTelemetry 整合 (monitoring/observability.py)
  * 支援分散式追蹤 (Console + OTLP exporters)
  * 支援指標收集 (Console + OTLP + Prometheus exporters)
  * 自動 HTTP 請求追蹤

- 新增 Pytest 監控插件 (monitoring/pytest_plugin.py)
  * 自動收集測試執行指標
  * 記錄測試時長和狀態
  * 支援 --trace-console, --trace-otlp, --metrics-prometheus 選項

- 新增 AI 指標收集器 (monitoring/ai_metrics_collector.py)
  * ResponseQuality metrics
  * Hallucination detection metrics
  * Model drift metrics
  * Bias detection metrics
  * Performance metrics (latency, tokens, cost)

- 新增 Prometheus/Grafana 配置
  * Prometheus 配置檔 (prometheus.yml)
  * 警報規則 (alerts.yml)
  * Grafana Dashboard (grafana-dashboard.json)

- 更新文件
  * 新增監控整合指南 (docs/MONITORING.md)
  * 更新 README.md 添加監控功能說明
  * 更新 requirements.txt 添加監控依賴

測試結果：
 3 個單元測試通過
 Console 追蹤正常輸出
 測試指標成功收集
 Span 追蹤功能正常

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,11 @@ allure-pytest==2.13.2
 # 工具
 python-dotenv==1.0.0
 pyyaml==6.0.1
+
+# 監控與可觀測性
+opentelemetry-api==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-exporter-otlp==1.38.0
+opentelemetry-exporter-prometheus==0.59b0
+opentelemetry-instrumentation-requests==0.59b0
+prometheus-client==0.19.0
