feat: Step 10 - 測試資料管理完成
- 新增測試資料生成器 (utils/test_data_generator.py)
  * 聊天訊息資料生成 (200筆)
  * AI 測試案例生成 (100筆)
  * 提示注入案例生成 (50筆)
  * 偏見測試案例生成 (60筆)
  * 效能測試資料生成 (150筆)
  * 支援可重現的隨機資料 (seed)

- 新增測試資料驗證器 (utils/test_data_validator.py)
  * 驗證必要欄位完整性
  * 驗證資料型別正確性
  * 驗證資料值合理性
  * 提供詳細錯誤報告

- DVC 整合
  * 初始化 DVC repository
  * 追蹤測試資料集目錄
  * 建立 DVC 配置檔 (dvc.yaml)
  * 生成 .dvc 追蹤檔

- 文件
  * 新增資料管理指南 (docs/DATA_MANAGEMENT.md)
  * DVC 使用教學
  * 資料集說明文件
  * 團隊協作流程

- Makefile 擴充
  * make data-generate: 生成測試資料
  * make data-validate: 驗證測試資料
  * make dvc-init/push/pull/status: DVC 操作命令

測試結果:
 生成 560 筆測試資料
 所有資料驗證通過
 DVC 追蹤成功

--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,7 @@ opentelemetry-exporter-otlp==1.38.0
 opentelemetry-exporter-prometheus==0.59b0
 opentelemetry-instrumentation-requests==0.59b0
 prometheus-client==0.19.0
+
+# 資料版本控制
+dvc==3.50.0
+dvc-s3==3.2.0  # 如果使用 S3 儲存
