--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,7 +3,7 @@ name: Nightly Build
 on:
   schedule:
     # 每天凌晨 2 點（UTC）執行
-    - cron: '0 2 * * *'
+    # - cron: '0 2 * * *'
   workflow_dispatch:  # 允許手動觸發
 
 jobs:
